Fix database and User friend and something to request

--- a/app/views/friendrequests/_friendrequest1.html.erb
+++ b/app/views/friendrequests/_friendrequest1.html.erb
@@ -1,9 +1,13 @@
-<% friendrequestsend.each do |friendrequest| %>
-<tr id="tr_<%= friendrequest.id %>">
-    <td><%= friendrequest.usersend.email %></td>
-    <td><%= friendrequest.usersend.name %></td>
+<% listaccquatances.each do |listaccquatance| %>
+<tr id="tr_<%= listaccquatance.id %>">
+    <td><%= listaccquatance.email %></td>
+    <td><%= listaccquatance.name %></td>
     <td>
-      <h6>No one</h6>
+      <%= form_for( friendrequest, remote: true) do |f| %>
+              <%= f.hidden_field :usersend_id, :value => listaccquatance.id %>
+              <%= f.hidden_field :user_id, :value => current_user.id %>
+              <%= f.submit "Sent", :data => {:disable_with => "Saving..."}, class: "btn btn-primary" %>
+      <% end %>
     </td>
 </tr>
 <% end %>
