--- a/app/views/friendrequests/_friendrequest2.html.erb
+++ b/app/views/friendrequests/_friendrequest2.html.erb
@@ -1,5 +1,5 @@
 <% friendsentaccpect.each do |sentaccpect| %>
-<tr id="tr_<%= sentaccpect.id %>">
+<tr id="trr_<%= sentaccpect.id %>">
     <td><%= sentaccpect.user.email %></td>
     <td><%= sentaccpect.user.name %></td>
     <td>
