--- a/app/views/friendrequests/_friendrequest.html.erb
+++ b/app/views/friendrequests/_friendrequest.html.erb
@@ -1,13 +1,7 @@
-<% listaccquatances.each do |listaccquatance| %>
-<tr id="tr_<%= listaccquatance.id %>">
-    <td><%= listaccquatance.email %></td>
-    <td><%= listaccquatance.name %></td>
+<tr id="trs_<%= friendrequest.id %>">
+    <td><%= friendrequest.usersend.email %></td>
+    <td><%= friendrequest.usersend.name %></td>
     <td>
-      <%= form_for( friendrequest, remote: true) do |f| %>
-              <%= f.hidden_field :usersend_id, :value => listaccquatance.id %>
-              <%= f.hidden_field :user_id, :value => current_user.id %>
-              <%= f.submit "Sent", :data => {:disable_with => "Saving..."}, class: "btn btn-primary" %>
-      <% end %>
+      <h6>No one</h6>
     </td>
 </tr>
-<% end %>
