--- a/app/views/friendrequests/create.js.erb
+++ b/app/views/friendrequests/create.js.erb
@@ -1,1 +1,7 @@
-alert("Hello")
+// xoa 1 cai tu bang va 1 cai hieu dung fadeout friendrequest
+alert("Hello");
+$("#tr_<%= @friendrequest.usersend.id %>").remove();
+$("#tr_<%= @friendrequest.usersend.id %>").hide().fadeOut(1000);
+
+$("#sentrequest").prepend("<%= j render @friendrequest %>");
+$("#trs_<%= @friendrequest.usersend.id %>").hide().fadeIn(1000);
