--- a/app/views/devise/navigation/_menupage.html.erb
+++ b/app/views/devise/navigation/_menupage.html.erb
@@ -27,15 +27,15 @@
                 <a class="nav-link" href="/messages">
                     <i class="fa fa-fw fa-area-chart"></i>
                     <span class="nav-link-text">Read Messages
-                        <span class="badge badge-pill badge-primary">6</span>
+                        <span class="badge badge-pill badge-primary"><%= Message.where(usersend_id: current_user.id).where(:status => false).count %></span>
                       </span>
                     </span>
                 </a>
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
-                <%= link_to  messages_sent_path, class:"nav-link" do%>
+                <%= link_to  sent_path, class:"nav-link" do%>
                     <i class="fa fa-fw fa-table"></i>
-                    <span class="nav-link-text">Sent Messages</span>
+                    <span class="nav-link-text">Sent Messages<span class="badge badge-pill badge-primary"><%= Message.where(user_id: current_user.id).count %></span></span>
                 <% end %>
             </li>
 
