--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -26,15 +26,16 @@
 </div>
         <div class="form-group">
 
-          <%= f.label :title , "Tittle"%>
+          <%= f.label :title , "Title"%>
           <br />
-          <%= f.text_field :title, autocomplete: "off", cols: "80" %>
+          <%= f.text_field :title, autocomplete: "off", class: "form-text", style: "min-width: 100%" %>
         </div>
         <div class="form-group" rows="3">
           <%= f.label :content , "Content"%>
           <br />
-          <%= f.text_area :content, autocomplete: "off", cols: "80", rows: "10" %>
+          <%= f.text_area :content, class:'summernote', rows: "10", style: "min-width: 100%" %>
         </div>
+
         <%= f.hidden_field :user_id, :value => current_user.id %>
         <div class="actions">
           <br/>
@@ -43,5 +44,17 @@
         <% end %>
         <div>
         </div>
+
       </div>
+      <script type="text/javascript">
+    $( document ).ready(function() {
+        $('[data-provider="summernote"]').each(function(){
+            $(this).summernote({ });
+        })
+    });
+</script>
     </div>
+
+  </div>
+      
+</div>
