chua cai duoc summernote

--- a/app/views/friendrequests/_friendrequest2.html.erb
+++ b/app/views/friendrequests/_friendrequest2.html.erb
@@ -9,7 +9,7 @@
           <i class="fa fa-check" aria-hidden="true"></i>
         </button>
       <% else %>
-        <p style='color:#007bff;'>You accpected</p>
+        <p style='color:#007bff;'>You've accepted</p>
       <% end %>
     </td>
 </tr>
