--- a/app/views/friendrequests/index.html.erb
+++ b/app/views/friendrequests/index.html.erb
@@ -34,8 +34,8 @@
                       <table class="table table-responsive">
                         <thead>
                             <tr>
-                                <th>Email user</th>
-                                <th>Send to user</th>
+                                <th>User Email</th>
+                                <th>Send to User</th>
                                 <th>Accpect</th>
                             </tr>
                         </thead>
@@ -63,8 +63,8 @@
                       <table class="table table-responsive">
                         <thead>
                             <tr>
-                                <th>Email user</th>
-                                <th>Send to user</th>
+                                <th>User Email</th>
+                                <th>Send to User</th>
                                 <th>Status</th>
                             </tr>
                         </thead>
@@ -80,7 +80,7 @@
 
     <div class="card mb-3">
         <div class="card-header">
-            <i class="fa fa-area-chart"></i>Can you know the people ?</div>
+            <i class="fa fa-area-chart"></i>Do you know these people ?</div>
         <div class="card-body">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item">
