--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <div class="footers">
             <footer id="footer" class="footerBG">
                 <div class="footer">
-                  <strong>Yalo Social Network</strong> &copy; Copyright 2017 by <a title="Xem Profile" href="https://www.facebook.com/profile.php?id=100004566498021" target="_blank"><b>thaihocmap123@@gmail.com</b></a>
+                  <strong>Yalo Social Network</strong> &copy; Copyright 2017 by <a title="Xem Profile" href="https://www.facebook.com/profile.php?id=100004566498021" target="_blank"><b>thaihocmap123@gmail.com </b></a><a title="Xem Profile" href="https://www.facebook.com/JunusTSu" target="_blank"><b> work.tthoang@gmail.com</b></a>
               </div>
           </footer>
       </div>
