--- a/app/views/listaccquatances/index.html.erb
+++ b/app/views/listaccquatances/index.html.erb
@@ -26,7 +26,7 @@
 
     <div class="card mb-3">
         <div class="card-header">
-            <i class="fa fa-area-chart"></i>Can you know the people ?</div>
+            <i class="fa fa-area-chart"></i>Do you know these people ?</div>
         <div class="card-body">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item">
@@ -41,7 +41,7 @@
                             <tr>
                                 <th>Email</th>
                                 <th>Name</th>
-                                <th>Send friend Request</th>
+                                <th>Send Friend Request</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -51,7 +51,7 @@
                     <% else %>
                       <div class="mt-4" style="text-align:center;">
                         <h6>
-                          No anyone else in here. Please come back later!
+                          Nobody in here. Please come back later!
                         </h6>
                       </div>
                     <% end %>
