--- a/app/views/listfriends/index.html.erb
+++ b/app/views/listfriends/index.html.erb
@@ -4,7 +4,7 @@
     <!-- Breadcrumbs-->
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="/">Home</a></li>
-      <li class="breadcrumb-item active">List Friends</li>
+      <li class="breadcrumb-item active">Friends List</li>
     </ol>
 
     <div class="row">
@@ -14,7 +14,7 @@
                   <div class="card-body-icon">
                       <i class="fa fa-fw fa-shopping-cart"></i>
                   </div>
-                  <div class="mr-5"><%= @listfriendcurrent.count %> Members in list friends</div>
+                  <div class="mr-5"><%= @listfriendcurrent.count %> Members in friends list</div>
               </div>
           </div>
       </div>
@@ -35,8 +35,7 @@
                         <thead>
                             <tr>
                                 <th>Email</th>
-                                <th>Name Friend</th>
-                                <th>Send Email</th>
+                                <th>Friend Name</th>
                                 <th>Block</th>
                             </tr>
                         </thead>
