--- a/app/views/devise/navigation/_menupage.html.erb
+++ b/app/views/devise/navigation/_menupage.html.erb
@@ -188,7 +188,7 @@
                     <span aria-hidden="true">×</span>
                 </button>
             </div>
-            <div class="modal-body">You Sure ?</div>
+            <div class="modal-body">Are You Sure?</div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
                 <a class="btn btn-primary" href="login.html">Logout</a>
