--- a/app/views/friendrequests/_friendrequest.html.erb
+++ b/app/views/friendrequests/_friendrequest.html.erb
@@ -3,9 +3,9 @@
     <td><%= friendrequest.usersend.name %></td>
     <td>
       <% if friendrequest.status == false %>
-        <p style='color:#e74c3c;'>Waiting for accpect</p>
+        <p style='color:#e74c3c;'>Waiting for accept</p>
       <% else %>
-        <p style='color:#007bff;'>Accpected</p>
+        <p style='color:#007bff;'>Accepted</p>
       <% end %>
     </td>
 </tr>
