--- a/app/views/devise/navigation/_menu.html.erb
+++ b/app/views/devise/navigation/_menu.html.erb
@@ -1,7 +1,7 @@
 <nav id="topNav" class="navbar navbar-expand-md">
     <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand mr-3" href="/">Yalo Social Network</a>
+          <a class="navbar-brand mr-3" href="#">Yalo Social Network</a>
 
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
