--- a/app/views/listfriends/index.html.erb
+++ b/app/views/listfriends/index.html.erb
@@ -40,7 +40,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                          <%= render @listfriendcurrent %>
+                          <%= render @listfriendcurrentss %>
                         </tbody>
                       </table>
                 </div>
